5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1807_2567.log
== TEST (2019-06-10 22:32:36) 
-- CODE:
from numpy import*

x=array(eval(inpur("")))
w="*"

for i in range(x):
	w[i]=w*a
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:32:49) 
-- CODE:
from numpy import*

x=array(eval(input("")))
w="*"

for i in range(x):
	w[i]=w*a
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:33:02) 
-- CODE:
from numpy import*

x=array(eval(input("")))
w="*"

for i in range(x):
	w[i]=w*x
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:33:27) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	w[i]=w*x
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:33:40) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	w[i]=w*str(x)
print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:34:30) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	w[i]=str(w)8*x
print(e)
-- ERROR:
File "XXXX", line 7
    w[i]=str(w)8*x
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:34:41) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	w[i]=str(w)*x
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:35:00) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	w[i]*=x
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:35:12) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	w[i]*=str(x)
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 22:36:28) 
-- CODE:
from numpy import*

x=eval(input(""))
w="*"

for i in range(x):
	w[i]*=str(x)
print(w)
-- EXECUTION TIME:
1.13348
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2567/main.py", line 7, in <module>
    w[i]*=str(x)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 22:36:31) 
-- CODE:
from numpy import*

x=eval(input(""))
w="*"

for i in range(x):
	w[i]*=str(x)
print(w)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:50:00) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	print(w*(x-i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 15:51:10) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	print(w*(x-i))
	
for i in range(x):
	print(w*(1+i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:51:21) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	print(w*(x-i))
	
for i in range(x):
	print(w*(1+i5))

-- EXECUTION TIME:
0.939211
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2567/main.py", line 10, in <module>
    print(w*(1+i5))
NameError: name 'i5' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 15:51:30) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	print(w*(x-i))
	
for i in range(x):
	print(w*(1+i))

-- EXECUTION TIME:
1.06277
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 15:55:32) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	print(w*(x-i))
	
for i in range(x):
	print(w*(1+i))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
